--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,9 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/visualstudiocode,windows,java
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-files
 target
 .vscode
+.settings
+pbox-producer-private.properties
+pbox-producer-complete-private.properties
+
