config files update

--- a/files/pbox-producer-complete.properties
+++ b/files/pbox-producer-complete.properties
@@ -1,8 +1,8 @@
-bootstrap.servers=your-EH-namespace.servicebus.windows.net:9093
+bootstrap.servers=<your-EH-FQDN>:9093
 security.protocol=SASL_SSL
 sasl.mechanism=PLAIN
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="$ConnectionString" password="your-EH-connection-string";
-kafka.topic.name=test
+sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="$ConnectionString" password="<your-EH-connectionString>";
+kafka.topic.name=<your-EH>
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
 acks=0
